Fix home screen section logo size on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-.home-section-div {
-  height: 100vh;
-}
-
 .home-section-div .image-container {
   height: 35%;
-}
-
-.home-section-img {
-  max-width: 100;
-  height: auto;
-  width: auto\9;
 }
 
 .about-section-div {
